# litlan-bakendi

./: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml  requirements.txt
data/: crossword.py  islex_test.xml  test.xml  xmlDataParser.py
generation/: Crossword.py  Database.py  TrieCrosswordGenerator.py  xmlDataParser.py
litlan_bakendi/: Dockerfile  docker-compose.yaml  manage.py  requirements.txt
litlan_bakendi/litlan/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
litlan_bakendi/litlan/migrations/: 0001_initial.py
litlan_bakendi/litlan_bakendi/: asgi.py  settings.py  urls.py  wsgi.py
migrations/2025-02-03-204525_create_initial_tables/: down.sql  up.sql
sql/: create.sql  drop.sql  tables.sql
src/: main.rs
src/handlers/: crossword_handlers.rs  mod.rs
src/models/: crossword.rs  mod.rs
src/repository/: database.rs  mod.rs  schema.rs
