[package]
name = "litlan-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.137"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls"] } 
tokio = "1.43.0"
dotenv = "0.15"

